# microkinetics-motionet

./: README.md  setup.cfg
examples/: mn100_connect.py
src/microkinetics_motionet/: example.py  mn100.py
src/microkinetics_motionet/core/: basic_cmd.py  frame.py  query_set.py  var_convert.py
src/microkinetics_motionet/interface_wrapper/: interface.py
