[metadata]
name = microkinetics_motionet
version = attr: microkinetics_motionet.__version__
author = John Houlihan
author_email = houlihaj@uci.edu
description = A Python API for the MicroKinetics Corporation suite of motion controllers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/houlihaj/microkinetics-motionet
project_urls = 
	Bug Tracker = https://github.com/houlihaj/microkinetics-motionet/issues
classifiers =
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	License :: OSI Approved :: MIT License
	Operating System :: Microsoft :: Windows

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
install_requires =
	pyserial>=3.5
	pythoncrc>=1.21
include_package_data=True

[options.packages.find]
where = src